[gd_scene load_steps=13 format=3 uid="uid://g2rpclf1mf1q"]

[ext_resource type="Texture2D" uid="uid://g03l44tl8mnc" path="res://assets/background/bg-game.png" id="1_fxnnb"]
[ext_resource type="Script" uid="uid://dekxfb0e5y4t1" path="res://sence/main_menu.gd" id="1_uvq42"]
[ext_resource type="FontFile" uid="uid://c46ocep486vym" path="res://assets/fonts/retro.ttf" id="2_6p5io"]
[ext_resource type="PackedScene" uid="uid://j8gferth42ik" path="res://sence/level_select_menu.tscn" id="4_xe1im"]
[ext_resource type="Script" uid="uid://dqpx6ys3t7k3m" path="res://script/audio_control.gd" id="5_1gdqu"]
[ext_resource type="Texture2D" uid="uid://cduko1k88lslx" path="res://assets/ui/Button/Icon/ArrowLeft-Bold.png" id="6_6b8f4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6p5io"]
texture = ExtResource("1_fxnnb")
modulate_color = Color(0.423651, 0.423651, 0.423651, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.145098, 0.141176, 0.27451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 1
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgu45"]
bg_color = Color(0.145098, 0.141176, 0.27451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6b8f4"]
color = Color(1, 1, 1, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_fgu45"]
color = Color(0.346189, 0.547706, 1, 1)
thickness = 4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5re54"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uvq42")

[node name="BGmainMunu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6p5io")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -93.895
offset_right = 201.0
offset_bottom = 179.105
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_6p5io")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_6p5io")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_6p5io")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -332.0
offset_top = 33.0
offset_right = 429.0
offset_bottom = 204.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_6p5io")
theme_override_font_sizes/font_size = 90
text = "PONG TWO MIC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelSelectMenu" parent="." instance=ExtResource("4_xe1im")]
visible = false

[node name="Setting" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 42.0

[node name="MarginContainer" type="MarginContainer" parent="Setting"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Setting/MarginContainer"]
layout_mode = 2

[node name="Options" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.5
offset_top = -132.27
offset_right = 231.5
offset_bottom = 266.73
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fgu45")

[node name="Label" type="Label" parent="Options"]
layout_mode = 0
offset_left = 27.5
offset_top = 84.5
offset_right = 76.5
offset_bottom = 107.5
theme_override_fonts/font = ExtResource("2_6p5io")
theme_override_font_sizes/font_size = 18
text = "SFX "

[node name="Label2" type="Label" parent="Options"]
layout_mode = 0
offset_left = 33.5
offset_top = 182.27
offset_right = 94.5
offset_bottom = 205.27
theme_override_fonts/font = ExtResource("2_6p5io")
theme_override_font_sizes/font_size = 18
text = "Music"

[node name="Options" type="Label" parent="Options"]
layout_mode = 0
offset_left = 162.5
offset_top = 17.5
offset_right = 277.5
offset_bottom = 48.5
theme_override_fonts/font = ExtResource("2_6p5io")
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="AudioControl" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 42.5
offset_top = 129.27
offset_right = 392.5
offset_bottom = 145.27
theme_override_styles/slider = SubResource("StyleBoxLine_6b8f4")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_fgu45")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_5re54")
max_value = 4.0
value = 1.0
script = ExtResource("5_1gdqu")
audio_bus_name = "SFX"

[node name="AudioControl2" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 42.5
offset_top = 232.27
offset_right = 392.5
offset_bottom = 248.27
theme_override_styles/slider = SubResource("StyleBoxLine_6b8f4")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_fgu45")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_5re54")
max_value = 4.0
value = 1.0
script = ExtResource("5_1gdqu")
audio_bus_name = "SFX"

[node name="TextureButton" type="TextureButton" parent="Options"]
layout_mode = 0
offset_left = -315.5
offset_top = -100.73
offset_right = -273.5
offset_bottom = -42.73
texture_normal = ExtResource("6_6b8f4")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
[connection signal="value_changed" from="Options/AudioControl2" to="Options/AudioControl2" method="_on_value_changed"]
[connection signal="pressed" from="Options/TextureButton" to="." method="_on_back_to_menu_pressed"]
